--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "production": "parcel build src/index.html --global index --no-cache --out-dir=build --no-source-maps"
   },
   "dependencies": {
-    "one": "^6.0.1"
+    "one": "^6.0.1",
+    "autoprefixer": "^9.6.1",
+    "postcss-modules": "^1.4.1"
   },
   "devDependencies": {
-    "autoprefixer": "^9.6.1",
     "browserslist": "^4.6.4",
     "cssnano": "^4.1.10",
-    "postcss-modules": "^1.4.1",
     "posthtml-include": "^1.2.0",
     "posthtml-modules": "^0.4.2",
-    "prettier": "1.18.2",
     "sass": "^1.22.3"
   }
 }
